Add vendor-related files and models

--- a/foodOnline_main/static/css/custom.css
+++ b/foodOnline_main/static/css/custom.css
@@ -19,8 +19,9 @@
 .show-notification {
     position: fixed;
     bottom: 100%;
-    width: 15%;
+    width: max-content;
     right: 20px;
     animation-name: show-toast;
     animation-duration: 8s;
+    z-index: 9999;
 }
