--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -9,7 +9,7 @@
           <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
             <div class="logo">
               <figure>
-                <a href="{% url "home" %}" class="light-logo"><img src="{% static 'logo/foodOnlineLogo.png' %}" alt="FoodOnline" width="200" /></a>
+                <a href="{% url 'home' %}" class="light-logo"><img src="{% static 'logo/foodOnlineLogo.png' %}" alt="FoodOnline" width="200" /></a>
               </figure>
             </div>
 
@@ -26,7 +26,7 @@
           </div>
           <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
             <div class="login-option">
-              <a class="cs-color cs-popup-joinus-btn login-popup" data-target="#sign-in" data-toggle="modal" href="#user-register">Login</a> / <span><a href="{% url "registerUser" %}" class="cs-color cs-popup-joinus-btn login-popup ml-0">Register</a></span><a class="get-start-btn" href="register-restaurant.html">Register Restaurant</a>
+              <a class="cs-color cs-popup-joinus-btn login-popup" data-target="#sign-in" data-toggle="modal" href="#user-register">Login</a> / <span><a href="{% url 'registerUser' %}" class="cs-color cs-popup-joinus-btn login-popup ml-0">Register</a></span><a class="get-start-btn" href="{% url 'registerVendor' %}">Register Restaurant</a>
             </div>
           </div>
         </div>
