--- a/templates/accounts/forgotPassword.html
+++ b/templates/accounts/forgotPassword.html
@@ -9,11 +9,11 @@
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <div class="user-dashboard loader-holder" style="width: 450px; min-height: auto;">
               <div class="user-holder">
-                <h4 class="text-center" style="margin-bottom: 0;">SIGN IN</h4>
-                <p class="text-center">Order food from your favourite resteurants</p>
+                <h4 class="text-center" style="margin-bottom: 0;">Forgot your password?</h4>
+                <p class="text-center">Send us an request and we will respond with password recovery form.</p>
                 <hr />
                 <div id="restaurant-sets-holder">
-                  <form class="form-fields-set foodbakery-dev-restaurant-form" method="post" action="{% url 'login' %}" enctype="multipart/form-data">
+                  <form class="form-fields-set foodbakery-dev-restaurant-form" method="post" action="{% url 'forgotPassword' %}" enctype="multipart/form-data">
                     {% csrf_token %}
                     <ul class="register-add-restaurant-tab-container restaurant-information-tab-container">
                       <li>
@@ -26,12 +26,6 @@
                                   <input type="email" name="email" placeholder="Enter your email address" />
                                 </div>
                               </div>
-                              <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                                <div class="field-holder">
-                                  <label>Password</label>
-                                  <input type="password" name="password" placeholder="Enter your password" />
-                                </div>
-                              </div>
                             </div>
                           </div>
                         </div>
@@ -41,15 +35,14 @@
                           <div class="col-12">
                             <div class="field-holder mb-3">
                               <div class="payment-holder">
-                                <input type="submit" value="Sign In" id="btn-next-restaurant-information" class="btn btn-primary btn-block bgcolor" />
+                                <input type="submit" value="Continue" id="btn-next-restaurant-information" class="btn btn-primary btn-block bgcolor" />
                               </div>
                               <div class="text-center">
-                                <a href="{% url 'forgotPassword' %}" class="text-primary">Forgot password?</a>
+                                <a href="{% url 'login' %}" class="text-primary">Back to login</a>
                               </div>
                             </div>
                           </div>
                         </div>
-
                         <div class="row">
                           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                             {% include 'includes/alerts.html' %}
