--- a/templates/accounts/reset_password.html
+++ b/templates/accounts/reset_password.html
@@ -9,11 +9,10 @@
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <div class="user-dashboard loader-holder" style="width: 450px; min-height: auto;">
               <div class="user-holder">
-                <h4 class="text-center" style="margin-bottom: 0;">SIGN IN</h4>
-                <p class="text-center">Order food from your favourite resteurants</p>
+                <h4 class="text-center" style="margin-bottom: 0;">Reset your password</h4>
                 <hr />
                 <div id="restaurant-sets-holder">
-                  <form class="form-fields-set foodbakery-dev-restaurant-form" method="post" action="{% url 'login' %}" enctype="multipart/form-data">
+                  <form class="form-fields-set foodbakery-dev-restaurant-form" method="post" action="{% url 'resetPassword' %}" enctype="multipart/form-data">
                     {% csrf_token %}
                     <ul class="register-add-restaurant-tab-container restaurant-information-tab-container">
                       <li>
@@ -22,14 +21,14 @@
                             <div class="row">
                               <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                 <div class="field-holder">
-                                  <label>Email Address</label>
-                                  <input type="email" name="email" placeholder="Enter your email address" />
+                                  <label>Password</label>
+                                  <input type="password" name="password" placeholder="Set new password" />
                                 </div>
                               </div>
                               <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                 <div class="field-holder">
-                                  <label>Password</label>
-                                  <input type="password" name="password" placeholder="Enter your password" />
+                                  <label>Confirm password</label>
+                                  <input type="password" name="confirm_password" placeholder="Confirm new password" />
                                 </div>
                               </div>
                             </div>
@@ -41,10 +40,7 @@
                           <div class="col-12">
                             <div class="field-holder mb-3">
                               <div class="payment-holder">
-                                <input type="submit" value="Sign In" id="btn-next-restaurant-information" class="btn btn-primary btn-block bgcolor" />
-                              </div>
-                              <div class="text-center">
-                                <a href="{% url 'forgotPassword' %}" class="text-primary">Forgot password?</a>
+                                <input type="submit" value="Reset password" id="btn-next-restaurant-information" class="btn btn-primary btn-block bgcolor" />
                               </div>
                             </div>
                           </div>
