--- a/templates/includes/v_sidebar.html
+++ b/templates/includes/v_sidebar.html
@@ -9,8 +9,8 @@
       <li class="{% if 'profile' in request.path %} active {% endif %}">
         <a href="{% url 'vendorProfile' %}"><i class="icon-building"></i>My Restaurant</a>
       </li>
-      <li>
-        <a href="restaurant-menu-builder.html"><i class="icon-menu5"></i>Menu Builder</a>
+      <li class="{% if 'menuBuilder' in request.path %} active {% endif %}" >
+        <a href="{% url 'menuBuilder' %}"><i class="icon-menu5"></i>Menu Builder</a>
       </li>
       <li>
         <a href="restaurant-orders.html"><i class="icon-add_shopping_cart"></i>Orders</a>
