--- a/templates/includes/cover.html
+++ b/templates/includes/cover.html
@@ -1,10 +1,11 @@
 {% load static %}
 
-{% if vendor.user_profile.cover_picture %}
-  <div class="page-section restaurant-detail-image-section" style="background: url({{ vendor.user_profile.cover_picture.url }}) no-repeat scroll 0 0 / cover;">
-{% else %}
-  <div class="page-section restaurant-detail-image-section">
-{% endif %}
+<div class="page-section restaurant-detail-image-section"
+  style="background: url( {% if vendor.user_profile.cover_picture %}
+    {{ vendor.user_profile.cover_picture.url }}
+  {% else %}
+    {% static 'images/default-cover.png' %}
+  {% endif %}) no-repeat scroll 0 0 / cover;">
   <!-- Container Start -->
   <div class="container">
     <!-- Row Start -->
@@ -15,17 +16,24 @@
           <div class="company-info">
             <div class="img-holder">
               <figure>
+                <img src="
                 {% if vendor.user_profile.profile_picture %}
-                  <img src="{{ vendor.user_profile.profile_picture.url }}" alt="" />
-                {% endif %}
+                    {{ vendor.user_profile.profile_picture.url }}
+                  {% else %}
+                    {% static 'images/default-profile.png' %}
+                  {% endif %}
+                "
+                  alt="" />
               </figure>
             </div>
 
             <div class="text-holder">
               <span class="restaurant-title">{{ vendor.vendor_name }}</span>
               <div class="text">
-                <i class="icon-location"></i>
-                <p>{{ vendor.user_profile.address }}</p>
+                {% if vendor.user_profile.address %}
+                  <i class="icon-location"></i>
+                  <p>{{ vendor.user_profile.address }}</p>
+                {% endif %}
               </div>
             </div>
           </div>
