--- a/templates/marketplace/vendor_detail.html
+++ b/templates/marketplace/vendor_detail.html
@@ -129,14 +129,19 @@
                               </div>
                               <div class="price-holder">
                                 <span class="price">${{ food_item.price }}</span>
-                                <a href="#" class="restaurant-add-menu-btn"><i class="icon-plus4 text-color"></i></a>
-                                <span id="add-menu-loader-10"></span>
+                                <a href="#" class="decrease_cart" data-id="{{ food_item.id }}" data-url="{% url 'decrease_cart' food_item.id %}" style="margin-right: 28px;"><i class="icon-minus text-color"></i></a>
+                                <label id="qty-{{ food_item.id }}">0</label>
+                                <a href="#" class="add_to_cart" data-id="{{ food_item.id }}" data-url="{% url 'add_to_cart' food_item.id %}"><i class="icon-plus4 text-color"></i></a>
                               </div>
                             </li>
                           {% endfor %}
                         </ul>
                       {% endfor %}
                     </div>
+
+                    {% for item in cart_items %}
+                      <span id="qty-{{ item.food_item.id }}" class="item_qty d-none" data-qty="{{ item.quantity }}">{{ item.quantity }}</span>
+                    {% endfor %}
                   </div>
                 </div>
               </div>
