Add functionality to delete items from the cart

--- a/templates/marketplace/cart.html
+++ b/templates/marketplace/cart.html
@@ -17,11 +17,14 @@
               <div class="tab-content">
                 <div id="home" class="tab-pane in active">
                   <div class="menu-itam-holder">
+                    <div class="text-center p-5" id="empty-cart" style="display: none;">
+                      <h3>Your cart is empty</h3>
+                    </div>
                     <div id="menu-item-list-6272" class="menu-itam-list">
                       <ul>
                         {% if cart_items %}
                           {% for item in cart_items %}
-                            <li>
+                            <li id="cart-item-{{ item.id }}">
                               <div class="image-holder">
                                 <img src="{{ item.food_item.image.url }}" alt="" />
                               </div>
@@ -34,13 +37,14 @@
                                 <a href="#" class="decrease_cart" data-id="{{ item.food_item.id }}" data-url="{% url 'decrease_cart' item.food_item.id %}" style="margin-right: 28px;"><i class="icon-minus text-color"></i></a>
                                 <label id="qty-{{ item.food_item.id }}">0</label>
                                 <a href="#" class="add_to_cart" data-id="{{ item.food_item.id }}" data-url="{% url 'add_to_cart' item.food_item.id %}"><i class="icon-plus4 text-color"></i></a>
+                                <a href="#" class="delete_cart" data-id="{{ item.id }}" data-url="{% url 'delete_cart' item.id %}"><i class="icon-delete text-color"></i></a>
                               </div>
                             </li>
                           {% endfor %}
                         {% else %}
                           <li>
                             <div class="text-center p-5">
-                              <h6>Your cart is empty</h6>
+                              <h3>Your cart is empty</h3>
                             </div>
                           </li>
                         {% endif %}
