--- a/templates/marketplace/cart.html
+++ b/templates/marketplace/cart.html
@@ -31,10 +31,11 @@
                               <div class="text-holder">
                                 <h6>{{ item.food_item }}</h6>
                                 <span>{{ item.description }}</span>
+                                <a href="{% url 'vendor_detail' item.food_item.vendor.vendor_slug %}" class="badge badge-warning">{{ item.food_item.vendor }}</a>
                               </div>
                               <div class="price-holder">
                                 <span class="price">${{ item.food_item.price }}</span>
-                                <a href="#" class="decrease_cart" data-id="{{ item.food_item.id }}" data-url="{% url 'decrease_cart' item.food_item.id %}" style="margin-right: 28px;"><i class="icon-minus text-color"></i></a>
+                                <a href="#" class="decrease_cart" data-id="{{ item.food_item.id }}" id="{{ item.id }}" data-url="{% url 'decrease_cart' item.food_item.id %}" style="margin-right: 28px;"><i class="icon-minus text-color"></i></a>
                                 <label id="qty-{{ item.food_item.id }}">0</label>
                                 <a href="#" class="add_to_cart" data-id="{{ item.food_item.id }}" data-url="{% url 'add_to_cart' item.food_item.id %}"><i class="icon-plus4 text-color"></i></a>
                                 <a href="#" class="delete_cart" data-id="{{ item.id }}" data-url="{% url 'delete_cart' item.id %}"><i class="icon-delete text-color"></i></a>
@@ -78,21 +79,21 @@
                           Subtotal
                           <span class="price float-right">
                             <span class="currency">$</span>
-                            <span id="subtotal">0</span>
+                            <span id="subtotal">{{ subtotal }}</span>
                           </span>
                         </li>
                         <li style="list-style-type: none;">
                           Tax
                           <span class="price float-right">
                             <span class="currency">$</span>
-                            <span id="tax">0</span>
+                            <span id="tax">{{ tax }}</span>
                           </span>
                         </li>
                         <li style="list-style-type: none; font-weight: 600;">
                           Total
                           <span class="price float-right">
                             <span class="currency">$</span>
-                            <span id="total">0</span>
+                            <span id="total">{{ total }}</span>
                           </span>
                         </li>
                       </ul>
