--- a/templates/marketplace/listings.html
+++ b/templates/marketplace/listings.html
@@ -49,6 +49,10 @@
                               {% endif %}&nbsp;
                             </small>
                           </span>
+                          {% if address %}
+                            <br />
+                            <span><small class="text-muted"><b>{{ vendor.kms }} km</b> away from {{ address }}</small></span>
+                          {% endif %}
                         </div>
                         <div class="list-option">
                           <a href="{% url 'vendor_detail' vendor.vendor_slug %}" class="viewmenu-btn text-color">View Menu</a>
