--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -17,8 +17,8 @@
               <ul>
                 <li class="location-has-children choose-location">
                   <form action="#">
-                    <input type="text" value="" name="location" placeholder="Enter your delivery location" autocomplete="off" />
-                    <span id="foodbakery_radius_location_open" class="foodbakery-radius-location"><i class="icon-target5"></i></span>
+                    <input type="text" value="" name="location" id="location" placeholder="Enter your location" autocomplete="off" />
+                    <span id="foodbakery_radius_location_open" class="foodbakery-radius-location" onclick="getLocation()"><i class="icon-target5"></i></span>
                   </form>
                 </li>
               </ul>
@@ -45,4 +45,42 @@
     </div>
   </header>
   <!-- Header End -->
+
+  <script>
+    var x = document.getElementById('location')
+    
+    var current_location = sessionStorage.getItem('current_location')
+    if (current_location) {
+      x.value = current_location
+    }
+    
+    function getLocation() {
+      if (navigator.geolocation) {
+        navigator.geolocation.getCurrentPosition(showPosition)
+      } else {
+        x.value = 'Geolocation is not supported by this browser.'
+      }
+    }
+    
+    function showPosition(position) {
+      var latitude = position.coords.latitude
+      var longitude = position.coords.longitude
+    
+      var GOOGLE_API_KEY = '{{ GOOGLE_API_KEY }}'
+      var url = 'https://maps.googleapis.com/maps/api/geocode/json?latlng=' + latitude + ',' + longitude + '&key=' + GOOGLE_API_KEY
+    
+      $.ajax({
+        url: url,
+        type: 'GET',
+        success: function (data) {
+          x.value = data.results[0].formatted_address
+          sessionStorage.setItem('current_location', data.results[0].formatted_address)
+          window.location = '?lat=' + latitude + '&lng=' + longitude
+        },
+        error: function (error) {
+          x.value = 'Error getting location'
+        }
+      })
+    }
+  </script>
 </div>
