--- a/templates/marketplace/checkout.html
+++ b/templates/marketplace/checkout.html
@@ -7,20 +7,74 @@
         <div class="page-section">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
+                    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                         <div class="tabs-holder horizontal">
                             <ul class="stickynav-tabs nav nav-tabs">
                                 <li class="active">
-                                    <a data-toggle="tab" href="#home"><i class="icon- fa-shopping-cart"></i>Cart
-                                        Items</a>
+                                    <a data-toggle="tab" href="#home"><i class="icon- fa-shopping-cart"></i>Billing
+                                        address</a>
                                 </li>
                             </ul>
                             <div class="tab-content">
                                 <div id="home" class="tab-pane in active">
                                     <div class="menu-itam-holder">
-                                        <div class="text-center p-5" id="empty-cart" style="display: none;">
-                                            <h3>Your cart is empty</h3>
+                                        <div id="menu-item-list-6272" class="menu-itam-list">
+                                            <form action="#" method="POST">
+                                                {% csrf_token %}
+                                                <div class="row">
+                                                    <div class="form-group col-md-6 col-sm-12 col-lg-6">
+                                                        First Name: {{ form.first_name }}
+                                                    </div>
+                                                    <div class="form-group col-md-6 col-sm-12 col-lg-6">
+                                                        Last Name: {{ form.last_name }}
+                                                    </div>
+                                                </div>
+                                                <div class="row">
+                                                    <div class="form-group col-md-6 col-sm-12 col-lg-6">
+                                                        Email: {{ form.email }}
+                                                    </div>
+                                                    <div class="form-group col-md-6 col-sm-12 col-lg-6">
+                                                        Phone: {{ form.phone }}
+                                                    </div>
+                                                </div>
+                                                <div class="row">
+                                                    <div class="form-group col-md-12 col-sm-12 col-lg-12">
+                                                        Address: {{ form.address }}
+                                                    </div>
+                                                </div>
+                                                <div class="row">
+                                                    <div class="form-group col-md-6 col-sm-12 col-lg-6">
+                                                        Country: {{ form.country }}
+                                                    </div>
+                                                    <div class="form-group col-md-6 col-sm-12 col-lg-6">
+                                                        City: {{ form.city }}
+                                                    </div>
+                                                </div>
+                                                <div class="row">
+                                                    <div class="form-group col-md-6 col-sm-12 col-lg-6">
+                                                        Postal Code: {{ form.pin_code }}
+                                                    </div>
+                                                    <div class="form-group col-md-6 col-sm-12 col-lg-6">
+                                                    </div>
+                                                </div>
                                         </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Your order section -->
+                    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                        <div class="tabs-holder horizontal">
+                            <ul class="stickynav-tabs nav nav-tabs">
+                                <li class="active">
+                                    <a data-toggle="tab" href="#home"><i class="icon- icon-room_service"></i>Your Order</a>
+                                </li>
+                            </ul>
+                            <div class="tab-content">
+                                <div id="home" class="tab-pane in active p-2">
+                                    <div class="menu-itam-holder">
                                         <div id="menu-item-list-6272" class="menu-itam-list">
                                             <ul>
                                                 {% if cart_items %}
@@ -36,20 +90,7 @@
                                                                    class="badge badge-warning">{{ item.food_item.vendor }}</a>
                                                             </div>
                                                             <div class="price-holder">
-                                                                <span class="price">{{ item.food_item.price }}$</span>
-                                                                <a href="#" class="decrease_cart"
-                                                                   data-id="{{ item.food_item.id }}" id="{{ item.id }}"
-                                                                   data-url="{% url 'decrease_cart' item.food_item.id %}"
-                                                                   style="margin-right: 28px;"><i
-                                                                        class="icon-minus text-color"></i></a>
-                                                                <label id="qty-{{ item.food_item.id }}">0</label>
-                                                                <a href="#" class="add_to_cart"
-                                                                   data-id="{{ item.food_item.id }}"
-                                                                   data-url="{% url 'add_to_cart' item.food_item.id %}"><i
-                                                                        class="icon-plus4 text-color"></i></a>
-                                                                <a href="#" class="delete_cart" data-id="{{ item.id }}"
-                                                                   data-url="{% url 'delete_cart' item.id %}"><i
-                                                                        class="icon-delete text-color"></i></a>
+                                                                <span class="price">{{ item.quantity }}  x  {{ item.food_item.price }} $</span>
                                                             </div>
                                                         </li>
                                                     {% endfor %}
@@ -62,29 +103,6 @@
                                                 {% endif %}
                                             </ul>
                                         </div>
-
-                                        {% for item in cart_items %}
-                                            <span id="qty-{{ item.food_item.id }}" class="item_qty d-none"
-                                                  data-qty="{{ item.quantity }}">{{ item.quantity }}</span>
-                                        {% endfor %}
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Your order section -->
-
-                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                        <div class="tabs-holder horizontal">
-                            <ul class="stickynav-tabs nav nav-tabs">
-                                <li class="active">
-                                    <a data-toggle="tab" href="#home"><i class="icon- icon-room_service"></i>Your Order</a>
-                                </li>
-                            </ul>
-                            <div class="tab-content">
-                                <div id="home" class="tab-pane in active p-2">
-                                    <div class="menu-itam-holder">
                                         <div>
                                             <ul>
                                                 <li style="list-style-type: none;">
@@ -109,19 +127,22 @@
                                                     Total
                                                     <span class="price float-right">
                                                         <span id="total">{{ total }}</span>
-                                                        <span class="currency"> $</span>
+                                                        <span class="currency">$</span>
                                                     </span>
                                                 </li>
 
-                                                <a href="{% url 'checkout' %}" class="btn btn-danger w-100 p-2 mt-3">Proceed
-                                                    to checkout</a>
+                                                <button type="submit" class="btn btn-danger w-100 p-2 mt-3">
+                                                    Place Order
+                                                </button>
                                             </ul>
+                                            </form>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
+                    <!-- Your order section end -->
                 </div>
             </div>
         </div>
