--- a/foodOnline_main/static/css/custom.css
+++ b/foodOnline_main/static/css/custom.css
@@ -33,3 +33,20 @@
 .main-search.fancy .field-holder input[type="text"] {
     color: black !important;
 }
+
+.payment-method [type=radio] {
+    position: absolute;
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.payment-method [type=radio] + img {
+    cursor: pointer;
+    padding: 5px;
+}
+
+.payment-method [type=radio]:checked + img {
+    outline: 2px solid #000;
+    border-radius: 10px;
+}
