--- a/templates/base.html
+++ b/templates/base.html
@@ -33,6 +33,9 @@
                 defer></script>
     {% endif %}
 
+    {# PayPal SDK #}
+    <script src="https://www.paypal.com/sdk/js?client-id={{ PAYPAL_CLIENT_ID }}&currency=USD"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="{% static 'js/custom.js' %}"></script>
 
