--- a/templates/orders/place_order.html
+++ b/templates/orders/place_order.html
@@ -18,8 +18,18 @@
                             <div class="tab-content">
                                 <div id="home" class="tab-pane in active">
                                     <div class="menu-itam-holder">
-                                        <div id="menu-item-list-6272" class="menu-itam-list">
-
+                                        <div id="menu-item-list-6272" class="menu-itam-list p-3">
+                                            <div class="billing-address">
+                                                <div><b>{{ order.name }}</b></div>
+                                                <div>{{ order.address }} - {{ order.country }}</div>
+                                                <div>{{ order.pin_code }}, {{ order.city }}</div>
+                                                <br>
+                                                <div><b>Phone: </b>{{ order.phone }}</div>
+                                                <div><b>Email: </b>{{ order.email }}</div>
+                                                <div><b>Payment: </b>{{ order.payment_method }}</div>
+                                                <br>
+                                                <a href="{% url 'checkout' %}" class="btn btn-outline-danger">Edit</a>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -40,8 +50,24 @@
                                 <div id="home" class="tab-pane in active p-2">
                                     <div class="menu-itam-holder">
                                         <div>
+                                            <div>
+                                                <table class="table">
+                                                    <tbody>
+                                                    {% for item in cart_items %}
+                                                        <tr>
+                                                            <td><img src="{{ item.food_item.image.url }}" width="40"
+                                                                     alt="food image">
+                                                            </td>
+                                                            <td style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis">{{ item.food_item.name }}</td>
+                                                            <td>{{ item.quantity }}</td>
+                                                            <td>{{ item.food_item.price }}</td>
+                                                        </tr>
+                                                    {% endfor %}
+                                                    </tbody>
+                                                </table>
+                                            </div>
                                             <ul>
-                                                <li style="list-style-type: none;">
+                                                <li style=" list-style-type: none;">
                                                     Subtotal
                                                     <span class="price float-right">
                                                         <span id="subtotal">{{ subtotal }}</span>
@@ -66,9 +92,9 @@
                                                         <span class="currency"> $</span>
                                                     </span>
                                                 </li>
-
-                                                <a href="{% url 'checkout' %}" class="btn btn-danger w-100 p-2 mt-3">Proceed
-                                                    to checkout</a>
+                                                <hr>
+                                                {# PAYPAL CHECKOUT #}
+                                                <div id="paypal-button-container"></div>
                                             </ul>
                                         </div>
                                     </div>
@@ -81,4 +107,75 @@
         </div>
     </div>
     <!-- Main Section End -->
+    <script>
+        // Extract grand total from the server-side template
+        let total = "{{ total }}";
+        var url = "{% url 'payments' %}"
+        var order_number = "{{ order.order_number }}"
+        const csrftoken = getCookie('csrftoken');
+
+        function getCookie(name) {
+            let cookieValue = null;
+            if (document.cookie && document.cookie !== '') {
+                const cookies = document.cookie.split(';');
+                for (let i = 0; i < cookies.length; i++) {
+                    const cookie = cookies[i].trim();
+                    // Does this cookie string begin with the name we want?
+                    if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                        cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                        break;
+                    }
+                }
+            }
+            return cookieValue;
+        }
+
+        // Render the PayPal button into #paypal-button-container
+        paypal.Buttons({
+            createOrder: function (data, actions) {
+                // Create a PayPal order with the specified grand total
+                return actions.order.create({
+                    purchase_units: [{
+                        amount: {
+                            value: total,
+                        },
+                    }],
+                });
+            },
+            onApprove: function (data, actions) {
+                // Capture the PayPal order when the user approves the transaction
+                return actions.order.capture().then(function (orderData) {
+                    // Log the order data to the console
+                    console.log("Order Data:", orderData);
+
+                    // Extract the transaction ID
+                    let transactionId = orderData.purchase_units[0].payments.captures[0].id;
+                    let status = orderData.status;
+                    let payment_method = 'PayPal';
+                    sendTransaction(transactionId, payment_method, status);
+
+                    // Display a success message or perform additional actions
+                    // Example: alert('Transaction completed by ' + orderData.payer.name.given_name);
+                });
+            }
+        }).render('#paypal-button-container');
+
+        function sendTransaction(transactionId, payment_method, status) {
+            $.ajax({
+                type: 'POST',
+                url: url,
+                data: {
+                    'order_number': order_number,
+                    'transaction_id': transactionId,
+                    'payment_method': payment_method,
+                    'status': status,
+                    'csrfmiddlewaretoken': csrftoken,
+                },
+                success: function (response) {
+                    console.log(response);
+                    {#window.location.href = response.url;#}
+                },
+            });
+        }
+    </script>
 {% endblock %}
