Added payment processing, sending confirmation mails and order summary after ordering food.

--- a/foodOnline_main/static/css/custom.css
+++ b/foodOnline_main/static/css/custom.css
@@ -38,6 +38,10 @@ table > tbody > tr > td {
     border: none !important;
 }
 
+table > thead > tr > th {
+    border: none !important;
+}
+
 .payment-method [type=radio] {
     position: absolute;
     opacity: 0;
