--- a/templates/orders/place_order.html
+++ b/templates/orders/place_order.html
@@ -110,9 +110,10 @@
     <script>
         // Extract grand total from the server-side template
         let total = "{{ total }}";
-        var url = "{% url 'payments' %}"
-        var order_number = "{{ order.order_number }}"
+        const url = "{% url 'payments' %}";
+        const order_number = "{{ order.order_number }}";
         const csrftoken = getCookie('csrftoken');
+        const order_complete_url = "{% url 'order_complete' %}";
 
         function getCookie(name) {
             let cookieValue = null;
@@ -156,6 +157,9 @@
 
                     // Display a success message or perform additional actions
                     // Example: alert('Transaction completed by ' + orderData.payer.name.given_name);
+                    const element = document.getElementById('paypal-button-container');
+                    element.innerHTML = '';
+                    element.innerHTML = '<h4 class="text-center"><i class="fa fa-spinner fa-spin"></i>Please wait ...</h4>';
                 });
             }
         }).render('#paypal-button-container');
@@ -172,8 +176,7 @@
                     'csrfmiddlewaretoken': csrftoken,
                 },
                 success: function (response) {
-                    console.log(response);
-                    {#window.location.href = response.url;#}
+                    window.location.href = order_complete_url + "?order_number=" + response.order_number + "&transaction_id=" + response.transaction_id;
                 },
             });
         }
